src/test/compile-fail/assignment_type_mismatch.mmtn
// { "compile_status": "fail" }

struct Unit {}

fn main() -> u64 {
    let unit: u64 = Unit {};
    unit
}
